# knoughts_and_crosses

./: README.md  pyproject.toml
client/: index.html
client/assets/: styles.css
server/: game.py  main.py
server/models/: common.py  game.py  player.py
